feat: add video slider

--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -285,12 +285,14 @@
             </div>
           </div>
                       
-            <div class="splide">
+            <div class="splide video__slider vslider">
               <div class="splide__track">
                 <ul class="splide__list">
-                  <li class="splide__slide vslider__video"><iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-                  <li class="splide__slide vslider__video"><iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-                  <li class="splide__slide vslider__video"><iframe loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <li class="splide__slide vslider__video"><iframe class="vslider__video-item" loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/zp1BXPX8jcU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <li class="splide__slide vslider__video"><iframe class="vslider__video-item" loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <li class="splide__slide vslider__video"><iframe class="vslider__video-item" loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <li class="splide__slide vslider__video"><iframe class="vslider__video-item" loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/aWmJ5DgyWPI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+                  <li class="splide__slide vslider__video"><iframe class="vslider__video-item" loading="lazy" width="452" height="254" src="https://www.youtube.com/embed/2OR0OCr6uRE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
                 </ul>
               </div>
               <div class="splide__arrows">
@@ -305,71 +307,8 @@
                   </svg>                  
                 </button>
               </div>
-              <!-- <ul class="splide__pagination">
-                <li>
-                  <button
-                    class="splide__pagination__page is-active"
-                    type="button"
-                    aria-controls="splide01-slide01"
-                    aria-label="Go to slide 1"
-                    aria-current="true"
-                  >
-                  </button>
-                </li>
-                <li>
-                  <button
-                    class="splide__pagination__page"
-                    type="button"
-                    aria-controls="splide01-slide02"
-                    aria-label="Go to slide 2"
-                  >
-                  </button>
-                </li>
-              </ul> -->
             
             </div>
-
-          <div class="video__slider vslider">
-            <div class="vslider__videos">
-
-              <!-- <div class="vvideo">
-                <a class="video__link" href="https://youtu.be/neHA4MJwpnY">
-                    <picture>
-                        <source srcset="https://i.ytimg.com/vi_webp/neHA4MJwpnY/maxresdefault.webp" type="image/webp">
-                        <img class="video__media" src="https://i.ytimg.com/vi/neHA4MJwpnY/maxresdefault.jpg" alt="1. Пилот, разборы, ответы и лайвы">
-                    </picture>
-                </a>
-                <button class="video__button" aria-label="Запустить видео">
-                    <svg width="68" height="48" viewBox="0 0 68 48"><path class="video__button-shape" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path class="video__button-icon" d="M 45,24 27,14 27,34"></path></svg>
-                </button>
-            </div> -->
-
-              <iframe class="vslider__video" loading="lazy" src="https://www.youtube.com/embed/zp1BXPX8jcU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <iframe class="vslider__video" loading="lazy" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <iframe class="vslider__video vslider__video_s_hide" loading="lazy" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="vslider__control">
-              <button class="vslider__prev">
-                <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34806 11.6247L4.17414 6.00004L8.34806 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z" fill="#999999"/>
-                </svg>                  
-              </button>
-              <div class="vslider__dots">
-                <span class="vslider__dot active"></span>
-                <span class="vslider__dot"></span>
-                <span class="vslider__dot"></span>
-                <span class="vslider__dot"></span>
-                <span class="vslider__dot"></span>
-              </div>
-              <button class="vslider__next">
-                <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M0.348163 0.219168C0.748196 -0.125842 1.33192 -0.0559202 1.65195 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203298 1.62473C-0.116728 1.19347 -0.05187 0.564177 0.348163 0.219168ZM4.5223 0.219168C4.92234 -0.125841 5.50606 -0.0559197 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564178 4.5223 0.219168Z" fill="#999999"/>
-                </svg>                  
-              </button>
-            </div>
-
-
-          </div>
         </div>
       </section>
       <section class="gallery gallery_bg-dark" id="gallery">
@@ -516,7 +455,7 @@
     <section class="modal reservation" data-reservation data-modal-window>
       <div class="container modal__container reservation__container" data-reservation>
           <div class="modal__content reservation__content">
-              <div class="reservation__form">
+              <form class="reservation__form">
                   <div class="modal__close reservation__close" data-close data-reservation>&times;</div>
                   <fieldset class="reservation__booking">
                     <div class="logo reservation__logo"></div>
@@ -526,12 +465,12 @@
                     <div class="reservation__inputs">
                       <div class="reservation__when">
                         <input class="reservation__date reservation__input" type="date" required>
-                        <input class="reservation__time reservation__input"  type="time" min="09:00" step="900" required> <!--max="18:00" min="9:00" step="1800" type="time"-->
+                        <input class="reservation__time reservation__input"  type="time" min="09:00" max="18:00" step="1800" list required> 
                       </div>
 
                       <div class="reservation__name-input">
                         <span class='reservation__name-icon'></span>
-                        <input class="reservation__name reservation__input" placeholder="Name" type="text" required>
+                        <input class="reservation__name reservation__input" placeholder="Name" type="text" minlength="3" maxlength="15" pattern="^[a-zA-Z0-9_ А-Яа-я]*$" required>
                       </div>
 
                       <div class="reservation__email-input">
@@ -539,7 +478,7 @@
                         <input class="reservation__email reservation__input" placeholder="E-mail" type="email" required>
                       </div>
 
-                      <input class="reservation__phone reservation__input" placeholder="Phone" type="tel" required>
+                      <input class="reservation__phone reservation__input" placeholder="Phone" type="tel" pattern="[0-9]{1,10}|([0-9]{2}[-]){1,4}[0-9]{2}|([0-9]{2}[ ]){1,4}[0-9]{2}|([0-9]{3}[-]){1,2}[0-9]{3}|([0-9]{3}[ ]){1,2}[0-9]{3}" required>
                       <select class="reservation__select reservation__input">
                         <option disabled selected>Ticket Type</option> 
                         <option data-cost="20">Permanent exhibition</option> 
@@ -602,7 +541,7 @@
                       <input class="overview__total-sum" type="text" value="60 €" readonly>
                     </div>
 
-                    <form class="overview__credits credits" method="post">
+                    <div class="overview__credits credits" method="post">
                       <div class="credits__face">
                         <div class="credits__acceptable">
                           <img class="credits__type" src="assets/svg/form/visa.svg" alt="visa">
@@ -626,11 +565,11 @@
                           on back
                           of the card</p>
                       </div>
-                    </form>
+                    </div>
 
-                    <button class="overview__btn btn">Book</button>
+                    <button type="submit" class="overview__btn btn" >Book</button>
                   </fieldset>
-              </div>
+                </form>
           </div>
       </div>
   </section>
