--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -328,7 +328,7 @@
             <form class="tickets__booking booking" method="GET">
               <fieldset class="booking__type booking__type_md_hide">
               <legend class="booking__title">Ticket Type</legend>
-              <label class="booking__radio-label">Permanent exhibition
+              <label class="booking__radio-label" checked>Permanent exhibition
                 <input type="radio" class="booking__radio" name="radio" data-cost="20">
                 <span class="booking__checkmark"></span>
               </label>
