fix: fix ticket radio2

--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -328,8 +328,8 @@
             <form class="tickets__booking booking" method="GET">
               <fieldset class="booking__type booking__type_md_hide">
               <legend class="booking__title">Ticket Type</legend>
-              <label class="booking__radio-label" checked>Permanent exhibition
-                <input type="radio" class="booking__radio" name="radio" data-cost="20">
+              <label class="booking__radio-label">Permanent exhibition
+                <input type="radio" class="booking__radio" name="radio" data-cost="20" checked>
                 <span class="booking__checkmark"></span>
               </label>
               <label class="booking__radio-label">Temporary exhibition
