--- a/momentum/index.html
+++ b/momentum/index.html
@@ -17,6 +17,7 @@
           <button class="play-prev player-icon"></button>
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
+          <audio class="audio"></audio>
         </div>
         <ul class="play-list"></ul>
       </div>
@@ -51,6 +52,6 @@
         <div class="author"></div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
   </body>
 </html>
