fix: fix audioplayer

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -22,7 +22,7 @@
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
         </div>
-        <audio class="audio"></audio>
+        <audio class="audio" src="./assets/sounds/Aqua Caelestis.mp3"></audio>
         <ul class="play-list"></ul>
       </div>
 
@@ -142,15 +142,14 @@
       <date class="date" data-element="date"></date>
       <div class="greeting-container" data-element="greeting">
         <span class="greeting"></span>
-        <input type="text" class="name" placeholder="name"/>
+        <input type="text" class="name" placeholder="name" />
       </div>
       <div class="toDo-container" data-element="todolist">
         <div class="toDo-inputs">
           <span class="toDo-title">What is your main focus for today?</span>
           <input type="text" class="toDo-input" data-toDo />
         </div>
-        <ul class="toDo-list">
-        </ul>
+        <ul class="toDo-list"></ul>
       </div>
     </main>
     <footer class="footer">
