--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,28 +16,23 @@
   </head>
   <body>
     <header class="header">
-      <!-- <div style="width: 50px; height: 50px"></div> -->
       <div class="player" data-element="audio">
         <div class="player-controls">
           <button class="play-prev player-icon"></button>
           <button class="play player-icon"></button>
           <button class="play-next player-icon"></button>
         </div>
-        <audio class="audio" src="./assets/sounds/Aqua Caelestis.mp3"></audio>
         <div class="audio-player">
           <div class="timeline">
             <div class="progress"></div>
           </div>
           <div class="controls">
-            <div class="play-container">
-              <div class="toggle-play song-play"></div>
-            </div>
             <div class="song-time">
               <div class="current">0:00</div>
               <div class="divider">/</div>
               <div class="length"></div>
             </div>
-            <div class="song-name">Music Song</div>
+            <div class="song-name">Aqua Caelestis</div>
             <div class="volume-container">
               <div class="volume-button">
                 <div class="volume icono-volumeMedium">
