feat: add routing and render methods

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <title>Сhristmas tree</title>
+</head>
+
+<body>
+    <main class="container" id="root"></main>
+
+    <footer class="footer">
+        <div class="contacts">
+            <a class="developer" href="https://github.com/KatiaZakharina" target="_blank">Katia Zakharina</a>
+            <span class="year">2021</span>
+        </div>
+
+        <a href="https://rs.school/js/" target="_blank">
+            <img class="rs-logo" src="./assets/svg/rs_school_js.svg" alt="logo: rs school">
+        </a>
+    </footer>
+</body>
+
 </html>
