--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -9,18 +9,21 @@
     <title>Сhristmas tree</title>
 </head>
 
-<body>
-    <main class="container" id="root"></main>
+<body class="body">
+    <main class="container" id="root">
+    </main>
 
     <footer class="footer">
-        <div class="contacts">
-            <a class="developer" href="https://github.com/KatiaZakharina" target="_blank">Katia Zakharina</a>
-            <span class="year">2021</span>
-        </div>
+        <div class="footer__content">
+            <div class="contacts">
+                <a class="developer" href="https://github.com/KatiaZakharina" target="_blank">Katia Zakharina</a>
+                <span class="year">© 2021</span>
+            </div>
 
-        <a href="https://rs.school/js/" target="_blank">
-            <img class="rs-logo" src="./assets/svg/rs_school_js.svg" alt="logo: rs school">
-        </a>
+            <a href="https://rs.school/js/" target="_blank">
+                <img class="rs-logo" src="./assets/svg/rs_school_js.svg" alt="logo: rs school">
+            </a>
+        </div>
     </footer>
 </body>
 
