--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body class="body">
+    <header class="header-bar">
+        <div class="header-bar__inner">
+            <nav class="header-bar__nav nav">
+                <img class="nav__icon" data-redirection="" src="./assets/svg/tree.svg" alt="icon: tree">
+                <button class="nav__btn nav__btn_toys" data-redirection="toys">Игрушки</button>
+                <button class="nav__btn nav__btn_tree" data-redirection="tree">Ёлка</button>
+            </nav>
+            <div class="info-bar">
+                <input class="search" type="search">
+                <div class="indicator">
+                    <input class="indicator__counter counter" type="number" readonly value="0">
+                </div>
+            </div>
+        </div>
+    </header>
     <main class="container" id="root">
     </main>
 
@@ -21,7 +36,7 @@
             </div>
 
             <a href="https://rs.school/js/" target="_blank">
-                <img class="rs-logo" src="./assets/svg/rs_school_js.svg" alt="logo: rs school">
+                <img class="rs-logo" src="./assets/svg/rss.svg" alt="logo: rs school">
             </a>
         </div>
     </footer>
