feat: add toys page layout and local storage of selected cards

--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -18,7 +18,7 @@
                 <button class="nav__btn nav__btn_tree" data-redirection="tree">Ёлка</button>
             </nav>
             <div class="info-bar">
-                <input class="search" type="search">
+                <input class="search" type="search" placeholder="Найти игрушку" autocomplete="off" autofocus>
                 <div class="indicator">
                     <input class="indicator__counter counter" type="number" readonly value="0">
                 </div>
