--- a/christmas-task/src/index.html
+++ b/christmas-task/src/index.html
@@ -24,6 +24,7 @@
                 </div>
             </div>
         </div>
+        <audio class="audio" src="./assets/audio/audio.mp3"></audio>
     </header>
     <main class="container" id="root">
     </main>
