refactor: add class interfaces

--- a/news-JS-main/src/index.html
+++ b/news-JS-main/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>NewsPortal</title>
-    <link rel="shortcut icon" href="./assets/news.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/news.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -37,25 +37,20 @@
                         fill="white" />
                 </svg>
             </li>
-
         </ul>
     </header>
     <main>
         <div class="sources buttons"></div>
         <div class="news"></div>
     </main>
-    <!-- <footer>
-        <p class="copyright">
-            Copyright <a href="https://newsapi.org">NewsAPI</a>
-        </p>
-    </footer> -->
+
     <div class="my-footer">
         <a href="https://rs.school/js/" target="_blank">
-            <img class="rs-logo icon" src="../assets/rs_school_js.svg" alt="logo: rs school">
+            <img class="rs-logo icon" src="../assets/rs_school_js.svg" alt="logo: rs school" />
         </a>
         <a class="developer icon" href="https://github.com/KatiaZakharina" target="_blank">Katia Zakharina</a>
         <span class="year">2021</span>
-    </в>
+    </div>
 
     <template id="sourceItemTemp">
         <div class="source__item">
