--- a/museum-webpack/index.html
+++ b/museum-webpack/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script> -->
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -574,6 +574,5 @@
       </div>
   </section>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="js/index.js"></script>
   </body>
 </html>
