--- a/museum-webpack/index.html
+++ b/museum-webpack/index.html
@@ -8,24 +8,15 @@
   <link rel="icon" href="assets/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script> -->
-
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
   <link href="https://fonts.googleapis.com/css2?family=Forum&family=Roboto:wght@100;300;500;700&display=swap"
     rel="stylesheet">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Museum</title>
 </head>
 
-<body>
+<body data-theme="light">
   <header class="header">
     <div class="header__container container">
       <a class="logo" href="#"></a>
@@ -293,11 +284,14 @@
             preload="metadata"></video>
           <input class="player__range-time player__range-time_s_show" type="range" min="0" step="0.01" value="0">
           <div class="player__panel">
-            <button class="btn" data-player-btn><img class="player__play-button" src="assets/svg/play.svg" alt="play"></button>
+            <button class="btn" data-player-btn><img class="player__play-button" src="assets/svg/play.svg"
+                alt="play"></button>
             <input class="player__range-time player__range-time_s_hide" type="range" min="0" step="0.01" value="0">
-            <button class="btn" data-player-btn><img class="player__volume-button" src="assets/svg/volume.svg" alt="volume"></button>
+            <button class="btn" data-player-btn><img class="player__volume-button" src="assets/svg/volume.svg"
+                alt="volume"></button>
             <input class="player__range-volume" type="range" step="0.01" min="0" max="1" value="0.45">
-            <button class="btn" data-player-btn><img class="player__expand-button" src="assets/svg/expand.svg" alt="expand"></button>
+            <button class="btn" data-player-btn><img class="player__expand-button" src="assets/svg/expand.svg"
+                alt="expand"></button>
           </div>
         </div>
 
